fix bug of z-index

--- a/src/ui/ContactsPlace/components/ContactsPlaceHeader/ContactsPlaceHeader.module.scss
+++ b/src/ui/ContactsPlace/components/ContactsPlaceHeader/ContactsPlaceHeader.module.scss
@@ -30,6 +30,7 @@
   border: 1px solid $color1 !important;
   width: 200px !important;
   height: 200px !important;
+  z-index: 1500;
 }
 
 .listWrapper {
